--- a/pom.xml
+++ b/pom.xml
@@ -9,44 +9,20 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>personal.project</groupId>
-    <artifactId>company</artifactId>
+    <artifactId>job-portal-microservice</artifactId>
+    <packaging>pom</packaging>
     <version>0.0.1-SNAPSHOT</version>
-    <name>company</name>
-    <description>Microservice to take care of Company related activities.</description>
+    <name>job-portal-microservice</name>
+    <description>A simple web application using microservices to host job requests.</description>
+    <modules>
+        <module>company</module>
+        <module>job</module>
+        <module>review</module>
+    </modules>
+
     <properties>
         <java.version>17</java.version>
     </properties>
-    <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jpa</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
-            <scope>runtime</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.postgresql</groupId>
-            <artifactId>postgresql</artifactId>
-            <scope>runtime</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <optional>true</optional>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-        </dependency>
-    </dependencies>
 
     <build>
         <plugins>
