--- a/company/src/main/resources/application.properties
+++ b/company/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 server.port=8081
+
+# PostgreSQL
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.url=jdbc:postgresql://localhost:5432/company
+spring.datasource.username=pguser
+spring.datasource.password=password
+spring.jpa.database= POSTGRESQL
+spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
