--- a/job/.gitignore
+++ b/job/.gitignore
@@ -19,7 +19,7 @@ target/
 *.iml
 *.ipr
 /.mvn/
-/src/test/java/personal/project/job/JobApplicationTests.java
+/src/test/
 
 ### NetBeans ###
 /nbproject/private/
