--- a/job/src/main/resources/application.properties
+++ b/job/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+spring.application.name=job-service
 server.port=8082
 
 # PostgreSQL
@@ -8,3 +9,8 @@ spring.datasource.password=password
 spring.jpa.database= POSTGRESQL
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+# Eureka
+eureka.client.serviceUrl.default=http://localhost:8761/eureka/
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
