--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -14,6 +14,15 @@ spring.cloud.gateway.mvc.routes[2].id=review-service
 spring.cloud.gateway.mvc.routes[2].uri=lb://review-service
 spring.cloud.gateway.mvc.routes[2].predicates[0]=Path=/reviews/**
 
+spring.cloud.gateway.mvc.routes[3].id=eureka-server
+spring.cloud.gateway.mvc.routes[3].uri=http://localhost:8761
+spring.cloud.gateway.mvc.routes[3].predicates[0]=Path=/eureka/main
+spring.cloud.gateway.mvc.routes[3].filters[0]=SetPath=/
+
+spring.cloud.gateway.mvc.routes[4].id=eureka-server-static
+spring.cloud.gateway.mvc.routes[4].uri=http://localhost:8761
+spring.cloud.gateway.mvc.routes[4].predicates[0]=Path=/eureka/**
+
 logging.level.root=info
 logging.level.org.springframework.cloud.gateway.route.RouteDefinitionLocator=INFO
 logging.level.org.springframework.cloud.gateway = TRACE
